--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,3 @@
-<add-gig-form></add-gig-form>
+<header>Welcome to the Giglist. A navigation bar will live here.</header>
+<br>
+<router-outlet></router-outlet>
