--- a/frontend/src/app/gig-form/gig-form.component.html
+++ b/frontend/src/app/gig-form/gig-form.component.html
@@ -1,16 +1,34 @@
 <form [formGroup]="gigForm" (ngSubmit)="onSubmit()">
-  <label for="artist">Artist: </label>
-  <input id="artist" type="text" formControlName="artist">
+  <mat-form-field appearance="fill">
+    <mat-label>Artist</mat-label>
+    <input matInput placeholder="Artist" formControlName="artist">
+    <mat-hint>Performer name</mat-hint>
+  </mat-form-field>
   <br>
-  <label for="venue">Venue: </label>
-  <input id="venue" type="text" formControlName="venue">
+  <mat-form-field appearance="fill">
+    <mat-label>Venue</mat-label>
+    <input matInput placeholder="Venue" formControlName="venue">
+    <mat-hint>Gig location</mat-hint>
+  </mat-form-field>
   <br>
-  <label for="spotifyArtistId">Spotify Artist ID: </label>
-  <input id="spotifyArtistId" type="text" formControlName="spotifyArtistId">
+  <mat-form-field appearance="fill">
+    <mat-label>Spotify Artist ID</mat-label>
+    <input matInput placeholder="SpotifyArtistId" formControlName="spotifyArtistId">
+    <mat-hint>Obtain from Spotify artist link</mat-hint>
+  </mat-form-field>
   <br>
-  <label for="date">Date: </label>
-  <input id="date" type="text" formControlName="date">
+  <mat-form-field class="example-form-field">
+  <mat-label>Choose a date</mat-label>
+  <input matInput [matDatepicker]="datepicker" formControlName="date"/>
+  <mat-hint>MM/DD/YYYY</mat-hint>
+  <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
+  <mat-datepicker #datepicker>
+    <mat-datepicker-actions>
+      <button mat-button matDatepickerCancel>Cancel</button>
+      <button mat-raised-button matDatepickerApply>Apply</button>
+    </mat-datepicker-actions>
+  </mat-datepicker>
+</mat-form-field>
   <br>
-  <p>Complete the form to enable button.</p>
-  <button type="submit" [disabled]="!gigForm.valid">Submit</button>
+  <button mat-stroked-button type="submit" [disabled]="!gigForm.valid">Submit</button>
 </form>
