add login and signup pages

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>This is the homepage</p>
+<h1>Welcome to Gig List</h1>
+<div>
+    <button mat-stroked-button [routerLink]="'login'">Log in</button>
+    <button mat-stroked-button [routerLink]="'signup'">Sign up</button>
+</div>
