--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -11,13 +11,13 @@
     .sidenav-header {
         > h2 {
             margin: 0;
-            font-size: 1rem;
+            font-size: 2rem;
             line-height: 1.5rem;
         }
+    }
 
-        > p {
-            margin: 0;
-            font-size: 0.8rem;
-        }
+    .hide-header-text {
+        opacity: 0;
+        height: 0;
     }
 }
