--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -3,7 +3,13 @@
         <h2>Giglist</h2>
     </div>
     <mat-nav-list>
-        <a mat-list-item *ngFor="let item of menuItems()">
+        <a mat-list-item
+           *ngFor="let item of menuItems()"
+           [routerLink]="item.route"
+           routerLinkActive
+           #rla="routerLinkActive"
+           [activated]="rla.isActive"
+        >
             <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
             <span matListItemTitle *ngIf="!navContentCollapsed()">
                 {{item.label}}
