--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="app-shell">
 <mat-toolbar>
     <button mat-icon-button (click)="navbarCollapsed.set(!navbarCollapsed())">
         <mat-icon>menu</mat-icon>
@@ -11,3 +12,4 @@
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
+</div>
