add title to top of page

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,6 +3,7 @@
     <button mat-icon-button (click)="navbarCollapsed.set(!navbarCollapsed())">
         <mat-icon>menu</mat-icon>
     </button>
+    <h2>Giglist</h2>
 </mat-toolbar>
 <mat-sidenav-container>
     <mat-sidenav opened mode="side" [style.width]="navbarWidth()">
