--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -7,6 +7,10 @@
 mat-toolbar {
     position: relative;
     z-index: 5;
+
+    > h2 {
+        padding-left: 20px;
+    }
 }
 mat-sidenav-container {
     height: calc(100vh - 64px);
