basic gig list mockup

--- a/frontend/src/app/pages/gigs/gigs.component.html
+++ b/frontend/src/app/pages/gigs/gigs.component.html
@@ -1,1 +1,65 @@
-<h2>Gigs</h2>
+<mat-toolbar>November</mat-toolbar>
+
+<div class="gig-list">
+    <mat-card class="event-card">
+        <div class="event-content">
+            <div class="event-date">
+                <div class="event-day">Mon</div>
+                <div class="event-number">1</div>
+            </div>
+
+            <div class="event-title">Everything Everything</div>
+
+            <button mat-icon-button>
+                <mat-icon>edit</mat-icon>
+            </button>
+        </div>
+    </mat-card>
+    <mat-card class="event-card">
+        <div class="event-content">
+            <div class="event-date">
+                <div class="event-day">Tues</div>
+                <div class="event-number">2</div>
+            </div>
+
+            <div class="event-title">The World is a Beautiful Place and I Am No Longer Afraid to Die</div>
+
+            <button mat-icon-button>
+                <mat-icon>edit</mat-icon>
+            </button>
+        </div>
+    </mat-card>
+</div>
+
+<mat-toolbar>December</mat-toolbar>
+
+<div class="gig-list">
+    <mat-card class="event-card">
+        <div class="event-content">
+            <div class="event-date">
+                <div class="event-day">Sat</div>
+                <div class="event-number">30</div>
+            </div>
+
+            <div class="event-title">Green Day</div>
+
+            <button mat-icon-button>
+                <mat-icon>edit</mat-icon>
+            </button>
+        </div>
+    </mat-card>
+    <mat-card class="event-card">
+        <div class="event-content">
+            <div class="event-date">
+                <div class="event-day">Sun</div>
+                <div class="event-number">31</div>
+            </div>
+
+            <div class="event-title">blink-182</div>
+
+            <button mat-icon-button>
+                <mat-icon>edit</mat-icon>
+            </button>
+        </div>
+    </mat-card>
+</div>
