get gigs from list

--- a/frontend/src/app/pages/gigs/gigs.component.html
+++ b/frontend/src/app/pages/gigs/gigs.component.html
@@ -1,4 +1,6 @@
-<mat-toolbar>November</mat-toolbar>
+<mat-toolbar class="year">2025</mat-toolbar>
+
+<mat-toolbar class="month">November</mat-toolbar>
 
 <div class="gig-list">
     <mat-card class="event-card">
@@ -31,31 +33,17 @@
     </mat-card>
 </div>
 
-<mat-toolbar>December</mat-toolbar>
+<mat-toolbar class="month">December</mat-toolbar>
 
 <div class="gig-list">
-    <mat-card class="event-card">
+    <mat-card class="event-card" *ngFor="let gig of gigs">
         <div class="event-content">
             <div class="event-date">
-                <div class="event-day">Sat</div>
-                <div class="event-number">30</div>
+                <div class="event-day">{{ gig.day }}</div>
+                <div class="event-number">{{ gig.date }}</div>
             </div>
 
-            <div class="event-title">Green Day</div>
-
-            <button mat-icon-button>
-                <mat-icon>edit</mat-icon>
-            </button>
-        </div>
-    </mat-card>
-    <mat-card class="event-card">
-        <div class="event-content">
-            <div class="event-date">
-                <div class="event-day">Sun</div>
-                <div class="event-number">31</div>
-            </div>
-
-            <div class="event-title">blink-182</div>
+            <div class="event-title">{{ gig.title }}</div>
 
             <button mat-icon-button>
                 <mat-icon>edit</mat-icon>
