--- a/frontend/src/app/pages/gigs/gigs.component.html
+++ b/frontend/src/app/pages/gigs/gigs.component.html
@@ -4,19 +4,11 @@
     <ng-container *ngFor="let group of gigsByMonth">
         <mat-toolbar class="month">{{ group.month }}</mat-toolbar>
 
-        <mat-card class="event-card" *ngFor="let gig of group.gigs">
-            <div class="event-content">
-                <div class="event-date">
-                    <div class="event-day">{{ gig.day }}</div>
-                    <div class="event-number">{{ gig.date }}</div>
-                </div>
-
-                <div class="event-title">{{ gig.title }}</div>
-
-                <button mat-icon-button>
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </div>
-        </mat-card>
+        <app-event-card
+            *ngFor="let gig of group.gigs"
+            [day]="gig.day"
+            [date]="gig.date"
+            [title]="gig.title">
+        </app-event-card>
     </ng-container>
 </div>
