--- a/frontend/src/app/shared/layout/navbar/navbar.component.html
+++ b/frontend/src/app/shared/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="sidenav-header">
     <mat-nav-list>
         <a mat-list-item
-           *ngFor="let item of menuItems()"
+           *ngFor="let item of navItems"
            [routerLink]="item.route"
            routerLinkActive
            #rla="routerLinkActive"
