--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,17 +1,27 @@
-.example-spacer {
-    flex: 1 1 auto;
+.app-shell {
+    display: flex;
+    height: 100vh;
 }
-.sidenav-content {
-    padding: 24px;
-}
-mat-toolbar {
-    position: relative;
-    z-index: 5;
+.toolbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10%;
 
     > h2 {
         padding-left: 20px;
     }
 }
-mat-sidenav-container {
-    height: calc(100vh - 64px);
+.sidenav-shell {
+    position: relative;
+    width: 15%;
+    top: 10%;
+    padding: 24px;
+}
+.authbar-content {
+    position: fixed;
+    top: 0;
+    right: 5px;
+    padding: 5px;
 }
