--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,16 +1,19 @@
 <div class="app-shell">
-<mat-toolbar>
-    <button mat-icon-button (click)="navbarCollapsed.set(!navbarCollapsed())">
-        <mat-icon>menu</mat-icon>
-    </button>
-    <h2>Giglist</h2>
-</mat-toolbar>
-<mat-sidenav-container>
-    <mat-sidenav opened mode="side" [style.width]="navbarWidth()">
-        <app-navbar [navbarCollapsed]="navbarCollapsed()" />
-    </mat-sidenav>
-    <mat-sidenav-content class="sidenav-content" [style.margin-left]="navbarWidth()">
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+    <mat-toolbar class="toolbar">
+        <button mat-icon-button (click)="navbarCollapsed.set(!navbarCollapsed())">
+            <mat-icon>menu</mat-icon>
+        </button>
+        <h2>Giglist</h2>
+    </mat-toolbar>
+    <mat-sidenav-container class="authbar-shell">
+        <app-authbar class="authbar-content"></app-authbar>
+    </mat-sidenav-container>
+    <mat-sidenav-container class="sidenav-shell">
+        <mat-sidenav opened mode="side" [style.width]="navbarWidth()">
+            <app-navbar [navbarCollapsed]="navbarCollapsed()" />
+        </mat-sidenav>
+        <mat-sidenav-content class="sidenav-content" [style.margin-left]="navbarWidth()">
+            <router-outlet></router-outlet>
+        </mat-sidenav-content>
+    </mat-sidenav-container>
 </div>
