--- a/frontend/src/app/shared/layout/authbar/authbar.component.html
+++ b/frontend/src/app/shared/layout/authbar/authbar.component.html
@@ -1,13 +1,13 @@
 <div class="auth-header">
     <mat-nav-list class="horizontal-list">
-        <a mat-list-item>
-            <mat-icon matListItemIcon>login</mat-icon>
-            <span matListItemTitle>Login</span>
-        </a>
-
-        <a mat-list-item>
-            <mat-icon matListItemIcon>add</mat-icon>
-            <span matListItemTitle>Sign up</span>
+        <a mat-list-item
+           *ngFor="let item of authItems"
+           [href]="item.link"
+           target="_blank"
+           rel="noopener noreferrer"
+        >
+            <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
+            <span matListItemTitle>{{ item.label }}</span>
         </a>
     </mat-nav-list>
 </div>
