--- a/frontend/src/app/features/account/account.component.html
+++ b/frontend/src/app/features/account/account.component.html
@@ -1,6 +1,23 @@
-<h2>Account</h2>
-Username
-Email address
-Reset password
-Link/unlink Spotify
-Delete account
+<div class="account-settings">
+    <h3>Account Settings</h3>
+    <p>
+        Email address: standin&#64;gmail.com
+        <button mat-icon-button>
+            <mat-icon>edit</mat-icon>
+        </button>
+    </p>
+    <a mat-flat-button>
+        Reset password
+    </a>
+    <br>
+    <a mat-flat-button color="warn">
+        Delete account
+    </a>
+</div>
+<div class="integrations">
+    <h3>Spotify Integration</h3>
+    <p>No Spotify account linked</p>
+    <button mat-flat-button>
+        Link a Spotify account
+    </button>
+</div>
