fix toolbar positioning

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,20 +1,11 @@
 <div class="app-shell">
-    <header>
-        <mat-toolbar class="toolbar">
-            <button mat-icon-button (click)="navbarCollapsed.set(!navbarCollapsed())">
-                <mat-icon>menu</mat-icon>
-            </button>
-            <h2>Giglist</h2>
-        </mat-toolbar>
-        <mat-sidenav-container class="authbar-shell">
-            <app-authbar class="authbar-content"></app-authbar>
-        </mat-sidenav-container>
-    </header>
+    <app-header></app-header>
     <mat-sidenav-container class="sidenav-shell">
         <mat-sidenav opened mode="side" [style.width]="navbarWidth()">
             <app-navbar [navbarCollapsed]="navbarCollapsed()" />
         </mat-sidenav>
     </mat-sidenav-container>
-
-    <router-outlet></router-outlet>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
 </div>
