--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,4 +1,4 @@
-.app-shell {
+/* app-shell {
     display: flex;
     height: 100vh;
 }
@@ -24,4 +24,4 @@
     top: 0;
     right: 5px;
     padding: 5px;
-}
+} */
