--- a/frontend/src/app/shared/layout/header/header.component.html
+++ b/frontend/src/app/shared/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <mat-toolbar>
-        <button mat-icon-button (click)="navbarCollapsed.set(!navbarCollapsed())">
+        <button mat-icon-button (click)="menuClick()">
             <mat-icon>menu</mat-icon>
         </button>
         <h1>Giglist</h1>
