fix navbar sizing

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-shell" [ngStyle]="{ 'grid-template-columns': navBarCollapsed ? '65px 1fr' : 'minmax(200px, 250px)' }">
+<div class="app-shell" [ngStyle]="{ 'grid-template-columns': navBarCollapsed ? '70px 1fr' : '200px 1fr' }">
 .    <app-header (navBarCollapsed)="collapseNavBar($event)"></app-header>
     <mat-sidenav-container>
         <mat-sidenav opened mode="side">
