--- a/frontend/src/app/shared/layout/navbar/navbar.component.html
+++ b/frontend/src/app/shared/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div>
+<nav>
     <mat-nav-list>
         <a mat-list-item
            *ngFor="let item of navItems"
@@ -13,4 +13,4 @@
             </span>
         </a>
     </mat-nav-list>
-</div>
+</nav>
