--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -5,10 +5,7 @@
 }
 .toolbar {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 10%;
+    flex: 0 0 10%;
     z-index: 1000;
 
     > h2 {
@@ -21,8 +18,13 @@
     padding: 24px;
 }
 .page-content {
+    display: flex;
+    width: 100%;
+}
+.main-content {
     flex: 1;
-    display: block;
+    position: relative;
+    top: 10%;
 }
 mat-sidenav-content {
     margin-right: 5%;
