route to add-gig page

--- a/frontend/src/app/features/gigs/gig-calendar/gig-calendar.component.html
+++ b/frontend/src/app/features/gigs/gig-calendar/gig-calendar.component.html
@@ -1,4 +1,8 @@
-<div>
+<div class="controls">
+    <button mat-stroked-button class="add-gig-button" [routerLink]="['/add-gig']">
+        <mat-icon>add</mat-icon>
+        Add a gig
+    </button>
     <mat-button-toggle-group [hideSingleSelectionIndicator]=true>
         <mat-button-toggle value="upcoming">
             <mat-icon>keyboard_double_arrow_right</mat-icon>
