--- a/frontend/src/app/features/gigs/event-card/event-card.component.html
+++ b/frontend/src/app/features/gigs/event-card/event-card.component.html
@@ -10,7 +10,7 @@
         <button mat-icon-button>
             <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="deleteGig()">
             <mat-icon>delete</mat-icon>
         </button>
     </div>
