--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,13 +1,12 @@
 .app-shell {
     display: flex;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
 }
 .toolbar {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 10%;
+    flex: 0 0 10%;
+    z-index: 1000;
 
     > h2 {
         padding-left: 20px;
@@ -15,9 +14,20 @@
 }
 .sidenav-shell {
     position: relative;
-    width: 15%;
     top: 10%;
     padding: 24px;
+}
+.page-content {
+    display: flex;
+    width: 100%;
+}
+.main-content {
+    flex: 1;
+    position: relative;
+    top: 10%;
+}
+mat-sidenav-content {
+    margin-right: 5%;
 }
 .authbar-content {
     position: fixed;
