--- a/frontend/src/app/features/gigs/gig-calendar/gig-calendar.component.html
+++ b/frontend/src/app/features/gigs/gig-calendar/gig-calendar.component.html
@@ -1,3 +1,19 @@
+<div class="controls">
+    <button mat-stroked-button class="add-gig-button" [routerLink]="['/add-gig']">
+        <mat-icon>add</mat-icon>
+        Add a gig
+    </button>
+    <mat-button-toggle-group [hideSingleSelectionIndicator]=true>
+        <mat-button-toggle value="upcoming">
+            <mat-icon>keyboard_double_arrow_right</mat-icon>
+            Upcoming Gigs
+    </mat-button-toggle>
+        <mat-button-toggle value="past">
+            <mat-icon>keyboard_double_arrow_left</mat-icon>
+            Past Gigs
+        </mat-button-toggle>
+    </mat-button-toggle-group>
+</div>
 <div class="gig-list">
     <ng-container *ngFor="let yearGroup of groupedGigs">
         <mat-toolbar class="year">{{ yearGroup.year }}</mat-toolbar>
@@ -7,9 +23,12 @@
 
             <app-event-card
                     *ngFor="let gig of monthGroup.gigs"
+                    [id]="gig.id"
                     [day]=gig.day_of_week
                     [date]=gig.day_of_month
-                    [title]="gig.artist">
+                    [title]="gig.artist"
+                    (changed)="refreshList()"
+            >
             </app-event-card>
         </ng-container>
     </ng-container>
