mvp tidal login

--- a/frontend/src/app/features/playlists/playlists.component.html
+++ b/frontend/src/app/features/playlists/playlists.component.html
@@ -1,3 +1,7 @@
 <p>playlists works!</p>
 
+<div id="userInfo"></div>
+
 <button (click)="loginToTidal()">Tidal Login</button>
+
+<button (click)="seeAlbum()">See an album</button>
