--- a/frontend/src/app/features/integrations/integrations.component.html
+++ b/frontend/src/app/features/integrations/integrations.component.html
@@ -1,9 +1,9 @@
 <div class="eg">
-    <ng-container *ngFor="let integration of integrationTypes">
+    <ng-container *ngFor="let integration of statusOfAllowedIntegrations()">
         <mat-card appearance="outlined">
             <mat-card-content>
-                <h2>{{ integration }}</h2>
-                <button mat-stroked-button>
+                <h2>{{ integration.name }}</h2>
+                <button mat-stroked-button *ngIf="!integration.enabled">
                     <mat-icon>add</mat-icon>
                     Enable integration
                 </button>
